--- a/main.html
+++ b/main.html
@@ -8,7 +8,13 @@
 
 <body>
 	<!-- the entire body must be written by student -->
-    <div class="inner"></div>
+    <div class="inner">
+		<div class="content">
+			<div>
+				This is a demo of box model, try to replicate this box model in Html & Css and pass all the test cases.
+			</div>
+		</div>
+	</div>
 	<script type="text/javascript" src="./script.js">
 </script>
 
